--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,3 @@
-/* .board {
-  text-align: center;
-  /* margin-left: 35%; */
-
-/* }
-
-.cell {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 1.5em;
-  
-}
-
-table,
-td {
-    margin-top: 10px;
-    border: 1px solid black;
-    padding: 10px;
-} */
 
 
 
@@ -99,4 +79,64 @@ h2 {
 
 .win {
   display: none;
+}
+
+.safe button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  height: 40px;
+  width: 70px;
+  cursor: pointer;
+}
+
+
+
+body.light-mode {
+  background: #f5f5f5;
+  color: #1a1a1a;
+}
+
+body.light-mode .emoji button {
+  background: #e0e0e0;
+  color: #1a1a1a;
+  border: 2px solid #bbb;
+}
+
+body.light-mode .buttons .btn {
+  background: #e0e0e0;
+  color: #1a1a1a;
+  border: 1px solid #bbb;
+}
+
+body.light-mode .buttons .btn:hover {
+  background: #d5d5d5;
+}
+
+body.light-mode .board td {
+  background: #cce7ff;
+  color: #000000;
+  border: 1px solid #aaa;
+}
+
+body.light-mode .board td:hover {
+  background: #aad4f5;
+}
+
+body.light-mode .board td.revealed {
+  background: #ffffff;
+  color: #000000;
+}
+
+body.light-mode .modal,
+body.light-mode .win {
+  background: #ffffff;
+  border: 1px solid #999;
+  color: #000000;
+}
+
+body.light-mode .safe button {
+  background: #d0ebff;
+  color: #000000;
+  border: 1px solid #999;
 }
